fix for chrome, wrap large image in container and use flex

--- a/src/components/GalleryImageLarge/GalleryImageLarge.scss
+++ b/src/components/GalleryImageLarge/GalleryImageLarge.scss
@@ -17,9 +17,15 @@
     margin: auto;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     width: 80vw;
     height: 80vh;
     max-width: 100vh;
+}
+
+.imgContainer {
+    flex: 1;
+    position: relative;
 }
 
 .imageButton {
@@ -72,6 +78,7 @@
 }
 
 .largeImage {
+    position: absolute;
     object-fit: contain;
     width: 100%;
     height: 100%;
